--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fetchs",
+  "name": "fetc",
   "version": "0.0.1",
   "description": "A reusable fetch function for HTTP requests with caching and retry logic.",
   "type": "module",
